RESOLVED FIXED285784
REGRESSION(288650@main): [ Debug ] TestWebKitAPI.SiteIsolation.LoadHTMLString is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=285784
Summary REGRESSION(288650@main): [ Debug ] TestWebKitAPI.SiteIsolation.LoadHTMLString...
Dawn Morningstar
Reported 2025-01-10 16:22:51 PST
TestWebKitAPI.SiteIsolation.LoadHTMLString is constantly crashing on Debug queues after 288650@main HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.SiteIsolation.LoadHTMLString&style=debug TEST-RUN: https://build.webkit.org/#/builders/949/builds/5469 STDIO: https://build.webkit.org/#/builders/1236/builds/907/steps/19/logs/stdio CRASH: TestWebKitAPI.SiteIsolation.LoadHTMLString 2025-01-10 10:24:32.911 TestWebKitAPI[85410:3508175] +[IMKClient subclass]: chose IMKClient_Legacy ASSERTION FAILED: !users.contains(pageID) /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKit/UIProcess/WebProcessProxy.cpp(913) : void WebKit::WebProcessProxy::addVisitedLinkStoreUser(VisitedLinkStore &, WebPageProxyIdentifier) 1 0x14e4286fc WebKit::WebProcessProxy::addVisitedLinkStoreUser(WebKit::VisitedLinkStore&, WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>) 2 0x14e132a5c WebKit::ProvisionalPageProxy::initializeWebPage(WTF::RefPtr<API::WebsitePolicies, WTF::RawPtrTraits<API::WebsitePolicies>, WTF::DefaultRefDerefTraits<API::WebsitePolicies>>&&) 3 0x14e131e8c WebKit::ProvisionalPageProxy::ProvisionalPageProxy(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WebKit::BrowsingContextGroup&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, API::Navigation&, bool, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient, bool, API::WebsitePolicies*, WebKit::WebsiteDataStore*) 4 0x14e132c04 WebKit::ProvisionalPageProxy::ProvisionalPageProxy(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WebKit::BrowsingContextGroup&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, API::Navigation&, bool, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient, bool, API::WebsitePolicies*, WebKit::WebsiteDataStore*) 5 0x14e21ac88 WTF::Ref<WebKit::ProvisionalPageProxy, WTF::RawPtrTraits<WebKit::ProvisionalPageProxy>, WTF::DefaultRefDerefTraits<WebKit::ProvisionalPageProxy>> WebKit::ProvisionalPageProxy::create<WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>, WTF::Ref<WebKit::BrowsingContextGroup, WTF::RawPtrTraits<WebKit::BrowsingContextGroup>, WTF::DefaultRefDerefTraits<WebKit::BrowsingContextGroup>>, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>, API::Navigation&, bool&, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient&, bool&, API::WebsitePolicies*, WebKit::WebsiteDataStore*&>(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WTF::Ref<WebKit::BrowsingContextGroup, WTF::RawPtrTraits<WebKit::BrowsingContextGroup>, WTF::DefaultRefDerefTraits<WebKit::BrowsingContextGroup>>&&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, API::Navigation&, bool&, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient&, bool&, API::WebsitePolicies*&&, WebKit::WebsiteDataStore*&) 6 0x14e21a874 WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, WTF::RefPtr<WebKit::SuspendedPageProxy, WTF::RawPtrTraits<WebKit::SuspendedPageProxy>, WTF::DefaultRefDerefTraits<WebKit::SuspendedPageProxy>>&&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WebKit::LoadedWebArchive, WebCore::IsPerformingHTTPFallback, WebKit::WebsiteDataStore*) 7 0x14e2e2c60 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, WTF::URL const&, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 8 0x14e2e20ec WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, WTF::URL const&, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_0, void, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral>::call(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 9 0x14e411bf4 WTF::Function<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) const 10 0x14e3c52cc WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 11 0x14e412090 WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::URL const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&)::$_0::operator()() 12 0x14e411f94 WTF::Detail::CallableWrapper<WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::URL const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&)::$_0, void>::call() 13 0x14b549050 WTF::Function<void ()>::operator()() const 14 0x14bdcd634 WTF::CompletionHandler<void ()>::operator()() 15 0x14e6b9c28 void IPC::Connection::callReply<Messages::NetworkProcess::AddAllowedFirstPartyForCookies, WTF::CompletionHandler<void ()>>(IPC::Decoder&, WTF::CompletionHandler<void ()>&&) 16 0x14e6b9bf0 WTF::CompletionHandler<void (IPC::Decoder*)> IPC::Connection::makeAsyncReplyCompletionHandler<Messages::NetworkProcess::AddAllowedFirstPartyForCookies, WTF::CompletionHandler<void ()>>(WTF::CompletionHandler<void ()>&&, WTF::ThreadLikeAssertion)::'lambda'(IPC::Decoder*)::operator()(IPC::Decoder*) 17 0x14e6b9b1c WTF::Detail::CallableWrapper<WTF::CompletionHandler<void (IPC::Decoder*)> IPC::Connection::makeAsyncReplyCompletionHandler<Messages::NetworkProcess::AddAllowedFirstPartyForCookies, WTF::CompletionHandler<void ()>>(WTF::CompletionHandler<void ()>&&, WTF::ThreadLikeAssertion)::'lambda'(IPC::Decoder*), void, IPC::Decoder*>::call(IPC::Decoder*) 18 0x14c05c654 WTF::Function<void (IPC::Decoder*)>::operator()(IPC::Decoder*) const 19 0x14c05c484 WTF::CompletionHandler<void (IPC::Decoder*)>::operator()(IPC::Decoder*) 20 0x14e0ebd90 WebKit::AuxiliaryProcessProxy::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::__1::optional<IPC::ConnectionAsyncReplyHandler>, WebKit::AuxiliaryProcessProxy::ShouldStartProcessThrottlerActivity)::$_1::operator()(IPC::Decoder*) 21 0x14e0ebbe8 WTF::Detail::CallableWrapper<WebKit::AuxiliaryProcessProxy::sendMessage(WTF::UniqueRef<IPC::Encoder>&&, WTF::OptionSet<IPC::SendOption>, std::__1::optional<IPC::ConnectionAsyncReplyHandler>, WebKit::AuxiliaryProcessProxy::ShouldStartProcessThrottlerActivity)::$_1, void, IPC::Decoder*>::call(IPC::Decoder*) 22 0x14c05c654 WTF::Function<void (IPC::Decoder*)>::operator()(IPC::Decoder*) const 23 0x14c05c484 WTF::CompletionHandler<void (IPC::Decoder*)>::operator()(IPC::Decoder*) 24 0x14f7b6884 IPC::Connection::dispatchMessage(IPC::Decoder&) 25 0x14f7b6e04 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 26 0x14f7b71a4 IPC::Connection::dispatchOneIncomingMessage() 27 0x14f7ddadc IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2::operator()() const 28 0x14f7dda38 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_2, void>::call() 29 0x11658d9a0 WTF::Function<void ()>::operator()() const 30 0x116656848 WTF::RunLoop::performWork() 31 0x11665aac4 WTF::RunLoop::performWork(void*) LEAK: 1 WebPage LEAK: 2 WebFrame LEAK: 4 RenderObject LEAK: 1 Page LEAK: 1 Frame LEAK: 5 WebCoreNode
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-10 16:23:36 PST
Charlie Wolfe
Comment 2 2025-01-13 11:22:31 PST
EWS
Comment 3 2025-01-13 13:11:06 PST
Committed 288817@main (122959efc57b): <https://commits.webkit.org/288817@main> Reviewed commits have been landed. Closing PR #38946 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.