REGRESSION(288650@main): [ Debug ] TestWebKitAPI.SiteIsolation.LoadHTMLString is a constant crash https://bugs.webkit.org/show_bug.cgi?id=285784 rdar://142715462

Reviewed by Jonathan Bedard.

With site isolation there is something wrong with our visited link store tracking where we hit this
assertion ASSERT(!users.contains(pageID)); in WebProcessProxy::addVisitedLinkStoreUser. I tried to work
around this in 288547@main, but then it broke again in 288650@main when the process selection logic
changed.

Avoid this call for now until we can fix this with site isolation.

* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::initializeWebPage):

Canonical link: https://commits.webkit.org/288817@main